# modelz-py

./: .bumpversion.cfg  .gitignore  .pdm.toml  LICENSE  Makefile  README.md  pdm.toml  project-words.txt  pyproject.toml  test.py
.github/workflows/: pages.yml  python-check.yml
docs/source/: api.rst  cli.rst  conf.py  index.rst  openapi.rst
hack/: fix_swag.py  openapi-python-client.yaml
modelz/: __init__.py  aioclient.py  args.py  client.py  cmd.py  console.py  env.py  gradio_client.py  openapi_client.py  serde.py  utils.py
modelz/openapi/: swagger.json
modelz/openapi/sdk/models/: __init__.py  agent_token_list.py  agent_version_info.py  aws_secret.py  deployment.py  deployment_create_request.py  deployment_guide.py  deployment_huggingface_space_source.py  deployment_log.py  deployment_log_response.py  deployment_resource.py  deployment_response.py  deployment_source.py  deployment_spec_env_vars.py  deployment_status.py  deployment_update_request_env_vars.py  gcp_secret.py  get_ping_response_200.py  get_ping_response_200_additional_property.py  instance_metric_response.py  instance_spec.py  instance_status.py  key_response.py  managed_cluster.py  managed_cluster_list.py  member_role.py  metric.py  node_system_info.py  pgtype_jsonb.py  pkg_server_error.py  pkg_server_error_error.py  resource_list.py  secret.py  server.py  server_list.py  server_resource.py  server_resource_info.py  server_spec.py  server_spec_labels.py  server_status.py  (+14 more)
openapi/: swagger.json
openapi/sdk/: __init__.py
openapi/sdk/api/api_key/: put_users_login_name_api_keys.py
openapi/sdk/api/bill/: get_users_login_name_settings_billing_session_token.py  post_system_spend_limit_hook.py  post_users_login_name_settings_billing_spend_limit.py
openapi/sdk/api/deployment/: delete_users_login_name_clusters_cluster_id_deployments_name.py  get_clusters_cluster_id_server_resources.py  get_users_login_name_clusters_cluster_id_deployments_name_guides.py
openapi/sdk/api/events/: get_users_login_name_deployments_name_events.py  get_users_login_name_events.py
openapi/sdk/api/inference/: get_gradio_id.py  get_mosec_id.py  get_streamlit_id.py  post_gradio_id.py  post_mosec_id_inference.py  post_streamlit_id.py
openapi/sdk/api/managed_cluster/: get_clusteragent_connect.py  (+6 more)
openapi/sdk/models/: __init__.py  agent_token.py  api_key_map.py  build_list_response.py  build_response.py  credit_wallet.py  deployment_docker_source.py  deployment_event.py  deployment_event_list_response.py  deployment_git_source.py  deployment_instance.py  deployment_list_response.py  deployment_spec.py  deployment_update_request.py  docker_secret.py  framework_type.py  github_com_tensorchord_modelz_apiserver_pkg_internal_types_record.py  github_com_tensorchord_modelz_apiserver_pkg_internal_types_table_record.py  github_com_tensorchord_modelz_apiserver_pkg_query_template.py  image_config.py  instance.py  instance_list_response.py  instance_metric_response_list.py  managed_cluster.py  meter_session_key_response.py  metric_response.py  namespace_list.py  pgtype_status.py  secret.py  secret_create_request.py  secret_create_response.py  secret_list_response.py  secret_type.py  sql_null_int_32.py  sql_null_string.py  team_list_response.py  team_member.py  team_member_editable_fields.py  team_spec.py  team_update_request.py  (+10 more)
tests/: test_cli.py  test_cli_deployment.py  test_cli_standalone.py  test_cmd.py  test_env.py  test_serde.py
(+56 files in other folders)
