[project]
name = "modelz-py"
version = "0.1.0"
description = "machine learning models"
authors = [
    {name = "TensorChord", email = "modelz-support@tensorchord.ai"},
]
keywords = ["machine learning", "deep learning"]
classifiers = [
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.23.3",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
modelz = "modelz.cmd:main"

[tool.pdm]


[tool.ruff]
line-length = 88
