[project]
name = "modelz-py"
dynamic = ["version"]
description = "machine learning models"
authors = [
    {name = "TensorChord", email = "modelz-support@tensorchord.ai"},
]
keywords = ["machine learning", "deep learning"]
classifiers = [
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.23.3",
    "msgpack>=1.0.4",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
modelz = "modelz.cmd:main"

[tool.pdm]
[tool.pdm.version]
source = "scm"
write_to = "modelz/__version__.py"
write_template = "__version__ = '{}'"
[tool.pdm.scripts]
black = "black --check modelz"
ruff = "ruff check ."
lint = {composite = ["black", "ruff"]}
[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.0.252",
    "black>=23.1.0",
]
test = [
    "pytest>=7.2.1",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "B"]
